update social media font family

--- a/index.html
+++ b/index.html
@@ -84,11 +84,47 @@
                         </div>
                         <div class="col-12 mt-4">
                             <h5>Contact Yahya Lazrek: </h5>
-                            <ul class="contact-social_media">
-                                <li><a href="https://www.instagram.com/yahya.lz" target="_blank"><div class="ti-instagram"> Instagram</div></a></li>
-                                <li><a href="https://twitter.com/yahya_lz" target="_blank"><div class="ti-twitter"> Twitter</div></a></li>
-                                <li><a href="https://www.linkedin.com/in/yahyalazrek" target="_blank"><div class="ti-linkedin"> Linkedin</div></a></li>
-                                <li><a href="https://github.com/UUinc" target="_blank"><div class="ti-github"> Github</div></a></li>
+                            <ul class="contact-social_media line">
+                                <li>
+                                    <a href="https://uuinc.github.io/yahyalazrek" target="_blank">
+                                        <div class="d-flex align-items-center">
+                                            <div class="ti-world"></div>
+                                            <div class="d-inline-block pl-2">Website</div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/yahya.lz" target="_blank">
+                                        <div class="d-flex align-items-center">
+                                            <div class="ti-instagram"></div>
+                                            <div class="d-inline-block pl-2">Instagram</div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/yahya_lz" target="_blank">
+                                        <div class="d-flex align-items-center">
+                                            <div class="ti-twitter"></div>
+                                            <div class="d-inline-block pl-2">Twitter</div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/in/yahyalazrek" target="_blank">
+                                        <div class="d-flex align-items-center">
+                                            <div class="ti-linkedin"></div>
+                                            <div class="d-inline-block pl-2">Linkedin</div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://github.com/UUinc" target="_blank">
+                                        <div class="d-flex align-items-center">
+                                            <div class="ti-github"></div>
+                                            <div class="d-inline-block pl-2">Github</div>
+                                        </div>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
