not alone image updated

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <!-- Not Alone -->
                 <div class="col-md-6 col-lg-4 game">
                     <div class="portfolio-item">
-                        <img src="https://img.itch.zone/aW1nLzk5NDgwMjQucG5n/315x250%23c/f7B8tA.png" class="img-fluid" alt="Not Alone logo">
+                        <img src="https://img.itch.zone/aW1nLzk5NTM5NDYucG5n/315x250%23c/myD4YK.png" class="img-fluid" alt="Not Alone logo">
                         <div class="content-holder">
                             <a class="img-popup" href=""></a>
                             <div class="text-holder">
