add playstore icon and link

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -28,16 +28,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">                     
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">About Us</a>
+                        <a class="nav-link" href="index.html#about">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="privacypolicy.html">Privacy Policy</a>
+                        <a class="nav-link" href="#privacy-policy">Privacy Policy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="index.html" class="ml-4 nav-link btn btn-primary btn-sm rounded">Softwares</a>
+                        <a href="index.html#softwares" class="ml-4 nav-link btn btn-primary btn-sm rounded">Softwares</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,7 @@
     <!-- End Of Page Header -->
 
     <!-- Privacy Policy Section -->
-    <section class="section" id="about">
+    <section class="section" id="privacy-policy">
         <div class="container">
             <div id="content" class="site-content">
                 <section id="primary" class="content-area">
@@ -325,11 +325,10 @@
                     <h2 id="contact-us"><strong>Contact Us</strong></h2>
                     <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at</p>
                     <p class="mb-0"><a href="mailto:uu.soft.games@gmail.com">uu.soft.games@gmail.com</a></p>
-                    <p></p>
                 </div>
             </div>
             <!-- Page Footer -->
-            <footer class="mt-5 py-4 border-top border-secondary">
+            <footer class="mt-2 py-4 border-top border-secondary">
                 <p class="mb-0 small">&copy; <script>document.write(new Date().getFullYear())</script>, <b>UU Software</b> All rights reserved </p>     
             </footer>
             <!-- End of Page Footer -->  
