--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#about">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="privacypolicy.html">Privacy Policy</a>
+                        <a class="nav-link" href="privacypolicy.html#privacy-policy">Privacy Policy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -138,7 +138,19 @@
     <section id="softwares" class="section portfolio-section">
         <div class="container">
             <h6 class="section-title text-center">Our Softwares</h6>
-            <h6 class="section-subtitle mb-5 text-center">New stunning projects for our amazing clients</h6>
+            <h6 class="section-subtitle mb-3 text-center">New stunning projects</h6>
+            <div class="section-subtitle mb-4 text-center">
+                <a href="https://play.google.com/store/apps/dev?id=4736084601363370187" target="_blank">
+                    <svg class="kOqhQd" aria-hidden="true" width="30" height="30" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                        <path fill="none" d="M0,0h40v40H0V0z"></path><g><path d="M19.7,19.2L4.3,35.3c0,0,0,0,0,0c0.5,1.7,2.1,3,4,3c0.8,0,1.5-0.2,2.1-0.6l0,0l17.4-9.9L19.7,19.2z" fill="#EA4335"></path>
+                        <path d="M35.3,16.4L35.3,16.4l-7.5-4.3l-8.4,7.4l8.5,8.3l7.5-4.2c1.3-0.7,2.2-2.1,2.2-3.6C37.5,18.5,36.6,17.1,35.3,16.4z" fill="#FBBC04"></path>
+                        <path d="M4.3,4.7C4.2,5,4.2,5.4,4.2,5.8v28.5c0,0.4,0,0.7,0.1,1.1l16-15.7L4.3,4.7z" fill="#4285F4"></path>
+                        <path d="M19.8,20l8-7.9L10.5,2.3C9.9,1.9,9.1,1.7,8.3,1.7c-1.9,0-3.6,1.3-4,3c0,0,0,0,0,0L19.8,20z" fill="#34A853"></path></g>
+                    </svg>
+                    <span class="google-play">Google Play</span>
+                </a>
+            </div>
+
             <div class="filters">
                 <a href="#" data-filter=".game" class="active">
                     Game
@@ -224,12 +236,23 @@
                     <p class="mb-4">Marrakech, Morocco</p>
 
                     <h6 class="mb-0">Email</h6>
-                    <p class="mb-0"><a href="mailto:uu.soft.games@gmail.com">uu.soft.games@gmail.com</a></p>
-                    <p></p>
+                    <p class="mb-4"><a href="mailto:uu.soft.games@gmail.com">uu.soft.games@gmail.com</a></p>
+                    
+                    <div class="mb-0">
+                        <a href="https://play.google.com/store/apps/dev?id=4736084601363370187" target="_blank">
+                            <svg class="kOqhQd" aria-hidden="true" width="30" height="30" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                                <path fill="none" d="M0,0h40v40H0V0z"></path><g><path d="M19.7,19.2L4.3,35.3c0,0,0,0,0,0c0.5,1.7,2.1,3,4,3c0.8,0,1.5-0.2,2.1-0.6l0,0l17.4-9.9L19.7,19.2z" fill="#EA4335"></path>
+                                <path d="M35.3,16.4L35.3,16.4l-7.5-4.3l-8.4,7.4l8.5,8.3l7.5-4.2c1.3-0.7,2.2-2.1,2.2-3.6C37.5,18.5,36.6,17.1,35.3,16.4z" fill="#FBBC04"></path>
+                                <path d="M4.3,4.7C4.2,5,4.2,5.4,4.2,5.8v28.5c0,0.4,0,0.7,0.1,1.1l16-15.7L4.3,4.7z" fill="#4285F4"></path>
+                                <path d="M19.8,20l8-7.9L10.5,2.3C9.9,1.9,9.1,1.7,8.3,1.7c-1.9,0-3.6,1.3-4,3c0,0,0,0,0,0L19.8,20z" fill="#34A853"></path></g>
+                            </svg>
+                            <span class="google-play">Google Play</span>
+                        </a>
+                    </div>
                 </div>
             </div>
             <!-- Page Footer -->
-            <footer class="mt-5 py-4 border-top border-secondary">
+            <footer class="mt-2 py-4 border-top border-secondary">
                 <p class="mb-0 small">&copy; <script>document.write(new Date().getFullYear())</script>, <b>UU Software</b> All rights reserved </p>     
             </footer>
             <!-- End of Page Footer -->  
