--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">                     
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="goto('index.html#about')">About Us</a>
+                            <a class="nav-link" href="index.html#about" onclick="goto('index.html#about')">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#privacy-policy">Privacy Policy</a>
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" onclick="goto('index.html#softwares')" class="ml-4 nav-link btn btn-primary btn-sm rounded">Softwares</a>
+                            <a href="index.html#softwares" onclick="goto('index.html#softwares')" class="ml-4 nav-link btn btn-primary btn-sm rounded">Softwares</a>
                         </li>
                     </ul>
                 </div>
