--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html#softwares" onclick="goto('index.html#softwares')" class="ml-4 nav-link btn btn-primary btn-sm rounded">Softwares</a>
+                            <a href="index.html#softwares" onclick="goto('index.html#softwares')" class="ml-4 nav-link btn btn-primary btn-sm rounded softwaresBTN">Softwares</a>
                         </li>
                     </ul>
                 </div>
