--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="#about">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="privacypolicy.html#privacy-policy" onclick="goto('privacypolicy.html#privacy-policy')">Privacy Policy</a>
+                            <a class="nav-link" href="privacypolicy#privacy-policy" onclick="goto('privacypolicy#privacy-policy')">Privacy Policy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
