--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -19,7 +19,7 @@
         <!-- page Navigation -->
         <nav class="navbar custom-navbar navbar-expand-md navbar-light fixed-top" data-spy="affix" data-offset-top="10">
             <div class="container">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/">
                     <img src="assets/imgs/logo.png" alt="uu software logo" style="width: 35px;">
                 </a>
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">                     
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#about" onclick="goto('index.html#about')">About Us</a>
+                            <a class="nav-link" href="#about" onclick="goto('/#about')">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#privacy-policy">Privacy Policy</a>
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a href="index.html#softwares" onclick="goto('index.html#softwares')" class="ml-4 nav-link btn btn-primary btn-sm rounded softwaresBTN">Softwares</a>
+                            <a href="/#softwares" onclick="goto('/#softwares')" class="ml-4 nav-link btn btn-primary btn-sm rounded softwaresBTN">Softwares</a>
                         </li>
                     </ul>
                 </div>
