--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">                     
                         <li class="nav-item">
-                            <a class="nav-link" href="uusoftware#about" onclick="goto('/uusoftware#about')">About Us</a>
+                            <a class="nav-link" href="/uusoftware#about" onclick="goto('/uusoftware#about')">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#privacy-policy">Privacy Policy</a>
