--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     </div>
                     <!-- WEB -->
                     <!-- world-cup-schedule -->
-                    <div class="col-md-6 col-lg-4 desktop">
+                    <div class="col-md-6 col-lg-4 web">
                         <div class="portfolio-item">
                             <img src="assets/imgs/softwares/web/World-Cup-2022.png" class="img-fluid"
                                 alt="Unity WebGl Local Hoster logo">
